# esp32-server2

./: .envrc  Cargo.toml  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
